--- a/Redmine/Redmine/Base.lproj/Main.storyboard
+++ b/Redmine/Redmine/Base.lproj/Main.storyboard
@@ -153,7 +153,7 @@
         <!--Sign Up View Controller-->
         <scene sceneID="0Id-kj-6jA">
             <objects>
-                <viewController id="lNd-ec-ffr" customClass="ATESignUpViewController" customModule="Redmine" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lNd-ec-ffr" customClass="SignUpViewController" customModule="Redmine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ydB-gW-f59"/>
                         <viewControllerLayoutGuide type="bottom" id="aJg-5a-xRC"/>
@@ -264,6 +264,9 @@
                                 <state key="normal" title="Create">
                                     <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="onClickSignUpWithSender:" destination="lNd-ec-ffr" eventType="touchUpInside" id="CTm-8d-ozL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
@@ -275,6 +278,12 @@
                             <constraint firstItem="7hE-1V-f9k" firstAttribute="leading" secondItem="2Ea-EB-WPR" secondAttribute="leadingMargin" constant="32" id="WuQ-Xw-0qu"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="hostTextField" destination="mdh-ug-1up" id="EqJ-Rn-AUQ"/>
+                        <outlet property="nameTextField" destination="QsO-HU-Fgf" id="2dI-hH-0zC"/>
+                        <outlet property="signUpButton" destination="YQP-yt-1CX" id="dWn-KD-ksR"/>
+                        <outlet property="tokenTextField" destination="svx-Gf-YCx" id="JuS-nf-shF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jbY-ah-hp5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
