--- a/Redmine/Redmine/Base.lproj/Main.storyboard
+++ b/Redmine/Redmine/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JxK-Df-ogX">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -35,7 +36,7 @@
         <!--Login-->
         <scene sceneID="UqL-ha-dnj">
             <objects>
-                <viewController title="Login" id="g5P-en-wgo" customClass="ATELoginViewController" customModule="Redmine" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Login" id="g5P-en-wgo" customClass="LoginViewController" customModule="Redmine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Zul-by-jSH"/>
                         <viewControllerLayoutGuide type="bottom" id="ozv-YU-Ubp"/>
@@ -61,9 +62,6 @@
                                                 <state key="normal" title="+">
                                                     <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
-                                                <connections>
-                                                    <action selector="actionDisplayAccountsWithSender:" destination="g5P-en-wgo" eventType="touchUpInside" id="nTw-sT-OiJ"/>
-                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKt-gb-ybQ" userLabel="separator">
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.12" colorSpace="calibratedRGB"/>
@@ -115,7 +113,7 @@
                                     <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="actionLoginWithSender:" destination="g5P-en-wgo" eventType="touchUpInside" id="TRX-LJ-tMO"/>
+                                    <action selector="actionOnLogin:" destination="g5P-en-wgo" eventType="touchUpInside" id="bql-C7-Gzx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eQg-Bc-K6z" userLabel="Button - Add new Account">
@@ -124,7 +122,7 @@
                                     <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="actionSingUpWithSender:" destination="g5P-en-wgo" eventType="touchUpInside" id="06v-iW-YhK"/>
+                                    <action selector="actionOnSignUp:" destination="g5P-en-wgo" eventType="touchUpInside" id="iLR-in-zw9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -142,6 +140,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="H1O-eS-SdJ"/>
                     <connections>
+                        <outlet property="accountTitleLabel" destination="JjN-3f-K3p" id="pg8-Q4-Lvr"/>
                         <segue destination="8Ma-MU-5yi" kind="show" identifier="login_to_projectlist" id="9zv-Zz-o1d"/>
                         <segue destination="lNd-ec-ffr" kind="show" identifier="login_to_signup" id="jIX-Bx-bhj"/>
                     </connections>
