SignUp - Keyboard (manage keyboard appearance)

--- a/Redmine/Redmine/Base.lproj/Main.storyboard
+++ b/Redmine/Redmine/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -161,37 +160,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UkW-Go-Vqs">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="vfw-cg-DSe">
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UkW-Go-Vqs">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="180" id="4cT-x1-3fs"/>
+                                        </constraints>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQP-yt-1CX" userLabel="Button - Login">
+                                        <color key="backgroundColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="hcj-89-FFZ"/>
+                                            <constraint firstAttribute="width" constant="120" id="jLb-M4-XQV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Create">
+                                            <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onClickSignUpWithSender:" destination="lNd-ec-ffr" eventType="touchUpInside" id="CTm-8d-ozL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="4cT-x1-3fs"/>
+                                    <constraint firstItem="UkW-Go-Vqs" firstAttribute="centerY" secondItem="vfw-cg-DSe" secondAttribute="centerY" constant="-96" id="bTJ-Yx-Q3l"/>
+                                    <constraint firstItem="YQP-yt-1CX" firstAttribute="top" secondItem="UkW-Go-Vqs" secondAttribute="bottom" constant="32" id="dhR-vU-MdZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="UkW-Go-Vqs" secondAttribute="trailing" constant="32" id="fgf-Ld-VwS"/>
+                                    <constraint firstItem="YQP-yt-1CX" firstAttribute="centerX" secondItem="vfw-cg-DSe" secondAttribute="centerX" id="kHM-Yp-1dy"/>
+                                    <constraint firstItem="UkW-Go-Vqs" firstAttribute="centerX" secondItem="vfw-cg-DSe" secondAttribute="centerX" id="pdF-Th-wTw"/>
+                                    <constraint firstItem="UkW-Go-Vqs" firstAttribute="leading" secondItem="vfw-cg-DSe" secondAttribute="leading" constant="32" id="siJ-oT-vWe"/>
+                                    <constraint firstAttribute="bottom" secondItem="YQP-yt-1CX" secondAttribute="bottom" id="xp8-b5-gKg"/>
                                 </constraints>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YQP-yt-1CX" userLabel="Button - Login">
-                                <color key="backgroundColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="hcj-89-FFZ"/>
-                                    <constraint firstAttribute="width" constant="120" id="jLb-M4-XQV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Create">
-                                    <color key="titleColor" red="0.1137254902" green="0.91372549020000005" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="onClickSignUpWithSender:" destination="lNd-ec-ffr" eventType="touchUpInside" id="CTm-8d-ozL"/>
-                                </connections>
-                            </button>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="YQP-yt-1CX" firstAttribute="centerX" secondItem="2Ea-EB-WPR" secondAttribute="centerX" id="7TW-2O-5ok"/>
-                            <constraint firstItem="UkW-Go-Vqs" firstAttribute="leading" secondItem="2Ea-EB-WPR" secondAttribute="leadingMargin" constant="32" id="9gY-0q-07g"/>
-                            <constraint firstItem="YQP-yt-1CX" firstAttribute="top" secondItem="UkW-Go-Vqs" secondAttribute="bottom" constant="32" id="BIZ-a4-7UC"/>
-                            <constraint firstItem="UkW-Go-Vqs" firstAttribute="centerY" secondItem="2Ea-EB-WPR" secondAttribute="centerY" id="C9P-Fy-6hC"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="UkW-Go-Vqs" secondAttribute="trailing" constant="32" id="uUn-m3-my2"/>
+                            <constraint firstItem="vfw-cg-DSe" firstAttribute="leading" secondItem="2Ea-EB-WPR" secondAttribute="leading" id="LJ3-oV-xXn"/>
+                            <constraint firstItem="vfw-cg-DSe" firstAttribute="top" secondItem="ydB-gW-f59" secondAttribute="bottom" id="Zez-Jb-RHv"/>
+                            <constraint firstAttribute="trailing" secondItem="vfw-cg-DSe" secondAttribute="trailing" id="oMd-hF-euX"/>
+                            <constraint firstItem="aJg-5a-xRC" firstAttribute="top" secondItem="vfw-cg-DSe" secondAttribute="bottom" id="xGV-c3-yWJ"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="formStackView" destination="UkW-Go-Vqs" id="sr6-D5-Szc"/>
+                        <outlet property="scrollView" destination="vfw-cg-DSe" id="lhU-GP-WL0"/>
                         <outlet property="signUpButton" destination="YQP-yt-1CX" id="dWn-KD-ksR"/>
                     </connections>
                 </viewController>
