SignUp - Optimize focus management

--- a/Redmine/Redmine/views/register/support/SignUpAnimatedTextView.xib
+++ b/Redmine/Redmine/views/register/support/SignUpAnimatedTextView.xib
@@ -17,7 +17,10 @@
                     </constraints>
                     <color key="textColor" white="1" alpha="0.87" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                    <connections>
+                        <outlet property="delegate" destination="Xsd-rg-7uL" id="Drv-xw-l6m"/>
+                    </connections>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JtK-cT-3YG" userLabel="Label - Account PlaceHolder">
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
